[project]
name = "zeno-server"
version = "4.0.0"
description = "Zeno — YouTube RAG pipeline (ChromaDB)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=0.1.0",
    "langchain-groq>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.6.0",
    "langchain-chroma>=1.1.0",
    "sentence-transformers>=3.0.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "tenacity>=9.1.4",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "youtube-transcript-api>=1.2.4",
    "argon2-cffi>=23.0.0",
    "slowapi>=0.1.9",
    "tiktoken>=0.7.0",
    "numpy",
]
